[1.0.0] Added UpdateKey to manifest.json

--- a/HatsOnPetsPlus/manifest.json
+++ b/HatsOnPetsPlus/manifest.json
@@ -6,5 +6,5 @@
   "UniqueID": "Syma.HatsOnPetsPlus",
   "EntryDll": "HatsOnPetsPlus.dll",
   "MinimumApiVersion": "3.0.0",
-  "UpdateKeys": []
+  "UpdateKeys": [ "GitHub:SymaLoernn/Stardew_HatsOnPetsPlus" ]
 }
