Cleaned how the mod reads its custom data asset to remove the necessity of the hopp_reload command

--- a/HatsOnPetsPlus/manifest.json
+++ b/HatsOnPetsPlus/manifest.json
@@ -6,5 +6,5 @@
   "UniqueID": "Syma.HatsOnPetsPlus",
   "EntryDll": "HatsOnPetsPlus.dll",
   "MinimumApiVersion": "3.0.0",
-  "UpdateKeys": [ "GitHub:SymaLoernn/Stardew_HatsOnPetsPlus", "Nexus:22631" ]
+  "UpdateKeys": [ "Nexus:22631", "GitHub:SymaLoernn/Stardew_HatsOnPetsPlus" ]
 }
